<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <ImageView
        android:id="@+id/backgroundPicture"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:contentDescription="@string/backgroun_picture"
        android:scaleType="centerCrop"
        android:src="@drawable/izzyfizzybackground"
        tools:ignore="ImageContrastCheck"
        android:layout_marginHorizontal="8dp"
        android:layout_marginTop="20dp"
        android:layout_marginBottom="8dp"/>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:layout_editor_absoluteX="-1dp"
        tools:layout_editor_absoluteY="-60dp">

        <Button
            android:id="@+id/btNewGame"
            style="@style/Widget.Material3.Button.ElevatedButton"
            android:layout_width="184dp"
            android:layout_height="48dp"
            android:layout_marginTop="24dp"
            android:elevation="@dimen/cardview_default_radius"
            android:text="@string/start_new_game"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.577"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/imageView2" />

        <Button
            android:id="@+id/btAboutTheGame"
            style="@style/Widget.Material3.Button.ElevatedButton"
            android:layout_width="184dp"
            android:layout_height="48dp"
            android:layout_marginTop="20dp"
            android:text="@string/about_the_game"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.577"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/btUserName"
            app:layout_constraintVertical_bias="0.009" />

        <Button
            android:id="@+id/btUserName"
            style="@style/Widget.Material3.Button.ElevatedButton"
            android:layout_width="184dp"
            android:layout_height="48dp"
            android:layout_marginTop="20dp"
            android:text="@string/logga_in"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.577"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/btNewGame" />

        <ImageView
            android:id="@+id/imageView2"
            android:layout_width="429dp"
            android:layout_height="330dp"
            android:layout_gravity="center_horizontal"
            android:contentDescription="@string/logotype"
            android:src="@drawable/logotype"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.087"
            tools:ignore="ImageContrastCheck" />



        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_begin="319dp" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_begin="131dp" />




    </androidx.constraintlayout.widget.ConstraintLayout>


</FrameLayout>


